# chip8

./: .gitignore  CHIP-8  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json
.cache/clangd/index/: core.cpp.57D809ED02043AD8.idx  getfont.cpp.83246D146861ACD2.idx
src/: Platform.cpp  Platform.h  constants.h  core.cpp  core.h  display.cpp  drawgraphics.cpp  fontset.cpp  fontset.txt  getfont  getfont.cpp  interpret.cpp  keyboard.cpp  load_program.cpp  loadrom.cpp  main.cpp  main.h  opcodes.cpp  print_registers.cpp
src/App/: Chip8.cpp
